--- a/database/clothes_database.ipynb
+++ b/database/clothes_database.ipynb
@@ -11,9 +11,7 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
     "# Load API key from enviroment variables or a configuration file\n",
-    "#openai.api_key = dotenv_values(\".env\")[\"OPENAI_API_KEY\"]\n",
-    "#openai.api_key = \"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\"\n",
-    "pinecone_api_key = \"7cde47d4-3775-446e-9bf5-eb0b5c024477\""
+    "pinecone_api_key= dotenv_values(\".env\")[\"pinecone_api_key\"]"
    ]
   },
   {
